[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "anonipy"
description = "The data anonymization package"
authors=[{ name = "Erik Novak" }]
maintainers = [{ name = "Erik Novak" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["dependencies", "version"]
keywords = ["python", "machine learning", "natural language processing", "anonymization"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/eriknovak/anonipy"
Docs = "https://eriknovak.github.io/anonipy"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "python-githooks",
    "mkdocs-material",
    "mkdocstrings[python]",
]
test = [
    "coverage",
    "nbmake",
]
all = ["anonipy[dev,test]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["anonipy*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "anonipy.__version__" }