[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "anonipy"
description = "The data anonymization package"
authors=[
    { name = "Erik Novak" },
    { name = "Nina Kokalj" }
]
maintainers = [{ name = "Erik Novak" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["dependencies", "version"]
keywords = ["python", "machine learning", "natural language processing", "anonymization"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/eriknovak/anonipy"
Docs = "https://eriknovak.github.io/anonipy"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "python-githooks",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
]
test = [
    "pytest",
    "pytest-cov",
]
quant = [
    "bitsandbytes",
]
all = ["anonipy[dev,test,quant]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["anonipy*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "anonipy.__version__" }

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore:builtin type SwigPy.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]